parser/src/snapshots/long_parser__stmt__parse_block2.snap
---
source: parser/src/stmt.rs
expression: node

---
Ok(
    Located {
        inner: Block(
            BlockStmt(
                [],
            ),
        ),
        loc: None:1:3,
    },
)
