parser/src/snapshots/long_parser__stmt__parse_return2.snap
---
source: parser/src/stmt.rs
expression: node

---
Ok(
    Located {
        inner: Return(
            None,
        ),
        loc: None:1:1,
    },
)
