parser/src/snapshots/long_parser__stmt__parse_vardecl.snap
---
source: parser/src/stmt.rs
expression: node

---
Ok(
    Located {
        inner: SimpleDecl(
            [
                SimpleDecl {
                    name: Ident(
                        "i",
                    ),
                    ty: Int(
                        Signed,
                    ),
                    init: None,
                },
            ],
        ),
        loc: None:1:5,
    },
)
